Framework: Forward port ADB over network [1/3]
Includes:
- ADB Over Network, integration of the adb-host mode (already present)
  The feature can be used/tested without the Settings part:

    setprop service.adb.tcp.port 5555

  Note: This ADB setting is not persistent (for security purpose) and
  require init.rc implementation event like this : http://bit.ly/AdbTcpIP

  Author: Tanguy Pruvot
  Id: I5c61a53948349c785356cb5aae165110d75e3074

  Author: sssemil <suleymanovemil8@gmail.com>
  Show notification on adb over network too

  Screenshots - http://goo.gl/TgsRI6
  Id: I9ddc0aa9a4f330a06ab5d97a8645d1b31bb6f299

  Author: Ethan Chen <intervigil@gmail.com>
  Use custom ADB over wifi property
  * Use a custom system property to trigger the real one, so we avoid
  running afoul of any SELinux CTS requirements.

--- a/core/res/res/values-ru/nitrogen_strings.xml
+++ b/core/res/res/values-ru/nitrogen_strings.xml
@@ -36,4 +36,12 @@
     <string name="reboot_confirm" product="default">Ваш телефон будет перезагружен.</string>
     <!-- Reboot Progress Dialog. This is shown if the user chooses to reboot the phone. -->
     <string name="reboot_progress">Перезагрузка\u2026</string>
+
+    <!-- ADB over network notification -->
+    <string name="adb_net_active_notification_title">Включён режим отладки по сети</string>
+    <!-- ADB over USB and network notification -->
+    <string name="adb_both_active_notification_title">Режим отладки по USB и сети включен</string>
+    <!-- ADB notification message-->
+    <string name="adb_active_generic_notification_message">Нажмите, чтобы отключить отладку.</string>
+    <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
 </resources>
