--- a/core/res/res/values-ru/nitrogen_strings.xml
+++ b/core/res/res/values-ru/nitrogen_strings.xml
@@ -44,4 +44,9 @@
     <!-- ADB notification message-->
     <string name="adb_active_generic_notification_message">Нажмите, чтобы отключить отладку.</string>
     <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+
+    <!-- Global Actions -->
+    <string name="global_action_screenshot">Скриншот</string>
+    <string name="global_action_search">Поиск</string>
+    <string name="global_action_voicesearch">Голосовой поиск</string>
 </resources>
