GlobalActions: Use circular user avatars
* Use circular & smaller avatars, logic copied from SystemUI
* Improve current user indication (thanks to maxwen)

Change-Id: I89f23516da17e1c90240a7fbd8de40be30655f34

--- a/core/res/res/values-ru/nitrogen_strings.xml
+++ b/core/res/res/values-ru/nitrogen_strings.xml
@@ -46,6 +46,7 @@
     <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
 
     <!-- Global Actions -->
+    <string name="global_action_current_user">Текущий</string>
     <string name="global_action_screenshot">Скриншот</string>
     <string name="global_action_search">Поиск</string>
     <string name="global_action_voicesearch">Голосовой поиск</string>
