--- a/core/res/res/values/nitrogen_symbols.xml
+++ b/core/res/res/values/nitrogen_symbols.xml
@@ -55,4 +55,7 @@
 
   <!-- Screen Recording -->
   <java-symbol type="bool" name="config_enableScreenrecordChord" />
+
+  <!-- LED pulse -->
+  <java-symbol type="bool" name="config_ledCanPulse" />
 </resources>
