bring back screen record shortcut
Change-Id: Iad561a2dc7f6c68b49e40537c4d5152d93dcdf09

--- a/core/res/res/values/nitrogen_config.xml
+++ b/core/res/res/values/nitrogen_config.xml
@@ -25,4 +25,7 @@
 
     <!-- Is Advanced Reboot enabled? -->
     <bool name="config_advanced_reboot">true</bool>
+
+    <!-- If this is true, key chords can be used to take a screen record on the device. -->
+    <bool name="config_enableScreenrecordChord">true</bool>
 </resources>
