--- a/core/res/res/values/nitrogen_symbols.xml
+++ b/core/res/res/values/nitrogen_symbols.xml
@@ -73,4 +73,7 @@
   <java-symbol type="attr" name="min" />
   <java-symbol type="attr" name="unitsLeft" />
   <java-symbol type="attr" name="unitsRight" />
+
+  <!-- Hardware key binding -->
+  <java-symbol type="integer" name="config_deviceHardwareKeys" />
 </resources>
