Powermenu Torch option [1/2] - Ported up by @Mazda-- from Lollipop https://github.com/DirtyUnicorns/android_frameworks_base/commit/fd7707194c9fb760233759c69ec7966b62cdee9c
- Use CameraManager instead of TorchManager since we no longer use CM's torch fixes/implementation

Credit to @beanstown106 for his commit here
https://github.com/DirtyUnicorns/android_frameworks_base/commit/49e3cd541f68b00c04b6dda03341c09ba9ba57f9

PureNexus Edits: made to work with cm style powermenu

Change-Id: I92679c183d7822ec64c174d9f2d42ec8995824ac

--- a/core/res/res/values-ru/nitrogen_strings.xml
+++ b/core/res/res/values-ru/nitrogen_strings.xml
@@ -50,4 +50,5 @@
     <string name="global_action_screenshot">Скриншот</string>
     <string name="global_action_search">Поиск</string>
     <string name="global_action_voicesearch">Голосовой поиск</string>
+    <string name="global_action_torch">Фонарик</string>
 </resources>
