Forward Port ScreenRecorder from 4.4 (Squashed)
Squashed commit of the following:

Author: Evisceration <eviscerationls@gmail.com>
Date:   Fri Mar 14 17:30:00 2014 -0700
Add a timer to screen record
Change-Id: I0851344670ef2e55c044c255daf907d6e72614e0

Author: Alexander Martinz <eviscerationls@gmail.com>
Date:   Tue Jan 19 21:23:57 2016 +0100
Save screenrecord in "Screenrecords" directory
This was previously saved in "Screenshots"
- Also refactor source a bit, remove warnings
PS2: LOG screenshots --> screenrecords
Change-Id: Idf9b024bbbf1816aa91e5e455525750a761ddb73

Author: maxwen <max.weninger@gmail.com>
Date:   Sat Nov 28 15:38:42 2015 +0100
screen record: make sure to always delete tmp files
Tell media scanner that the tmp file got deleted
Change-Id: I2974969fa25a01c9422f13316d188b65db591156

Author: maxwen <max.weninger@gmail.com>
Date:   Sun Dec 28 21:31:46 2014 +0100
base: screenrecord: use different notification image
Change-Id: I252144a4f5c3bdaa84974b996348885ba8dee942

Author: XpLoDWilD <xplod@ouverta.fr>
Date:   Sun Jul 13 21:43:28 2014 +0200
Screenrecord: Fix SystemUI loop-crash
Change-Id: I25045820465d21b7d1f0e933e5e4f3324cb044b6

Author: maxwen <max.weninger@gmail.com>
Date:   Tue Apr 29 23:28:06 2014 +0200
base: screenrecord: update notification
Update show/hide pointer button for actual state
Change-Id: I02090f05b06896248483f3f9ff2eb22924a22476

Author: maxwen <max.weninger@gmail.com
Date:   Tue Dec 23 01:04:35 2014 +0100
Screenrecord: correct multi-user acces for settings
Change-Id: I0bee907d190b2dc0df1c12d136f31ed379a59866

Author: xplodwild <me@xplod.fr>
Date:   Wed Nov 13 08:16:57 2013 +0100
Screenrecord: Create the Screenshots directory if it doesn't exist
Change-Id: I2b0458eed024dbda97e9e1ea3426c12d29add781

Author: xplodwild <me@xplod.fr>
Date:   Tue Nov 5 20:30:09 2013 +0100
base: Add a key combo to start/stop video recording
Press volume up and power to start recording a video of your screen.
Press this key combo again to stop it.
Change-Id:

--- a/packages/SystemUI/res/values-ru/nitrogen_strings.xml
+++ b/packages/SystemUI/res/values-ru/nitrogen_strings.xml
@@ -20,4 +20,16 @@
     <!-- Notification which notifies user flashlight is enabled -->
     <string name="quick_settings_tile_flashlight_not_title">Фонарик включен</string>
     <string name="quick_settings_tile_flashlight_not_summary">Нажмите для выключения</string>
+
+    <!-- Screenrecord Notification Ticker -->
+    <string name="screenrecord_notif_ticker">Идёт запись с экрана</string>
+    <!-- Screenrecord notification title -->
+    <string name="screenrecord_notif_title">Запись с экрана</string>
+    <!-- Screenrecord notification action: Stop -->
+    <string name="screenrecord_notif_stop">Стоп</string>
+    <!-- Screenrecord notification action: show/hide pointer -->
+    <string name="screenrecord_notif_pointer_on">Показывать нажатия</string>
+    <string name="screenrecord_notif_pointer_off">Скрыть нажатия</string>
+    <!-- Screen record notification error title -->
+    <string name="screenrecord_notif_error">Невозможно записать экран</string>
 </resources>
