--- a/core/res/res/values/nitrogen_symbols.xml
+++ b/core/res/res/values/nitrogen_symbols.xml
@@ -62,4 +62,15 @@
   <java-symbol type="drawable" name="ic_audio_notification_new" />
   <java-symbol type="drawable" name="ic_audio_notification_mute_new" />
   <java-symbol type="drawable" name="ic_audio_notification_mute_alpha" />
+
+  <!-- SeekBarPreference -->
+  <java-symbol type="layout" name="seek_bar_preference" />
+  <java-symbol type="id" name="seekBarPrefBarContainer" />
+  <java-symbol type="id" name="seekBarPrefValue" />
+  <java-symbol type="id" name="seekBarPrefUnitsRight" />
+  <java-symbol type="id" name="seekBarPrefUnitsLeft" />
+  <java-symbol type="attr" name="interval" />
+  <java-symbol type="attr" name="min" />
+  <java-symbol type="attr" name="unitsLeft" />
+  <java-symbol type="attr" name="unitsRight" />
 </resources>
