fwb: Seperate statusbar from tuner and launch externally

--- a/packages/SystemUI/res/values/nitrogen_strings.xml
+++ b/packages/SystemUI/res/values/nitrogen_strings.xml
@@ -38,4 +38,6 @@
 
     <!-- Screenshot Delete Toast -->
     <string name="delete_screenshot_toast">Screenshot deleted</string>
+
+    <string name="statusbar_items_title">Statusbar icon</string>
 </resources>
