--- a/packages/SystemUI/res/values-ru/nitrogen_strings.xml
+++ b/packages/SystemUI/res/values-ru/nitrogen_strings.xml
@@ -33,6 +33,8 @@
     <!-- Screen record notification error title -->
     <string name="screenrecord_notif_error">Невозможно записать экран</string>
 
-  <!-- Screenshot Delete Toast -->
-  <string name="delete_screenshot_toast">Скриншот удалён</string>
+    <!-- Screenshot Delete Toast -->
+    <string name="delete_screenshot_toast">Скриншот удалён</string>
+
+    <string name="statusbar_items_title">Редактирование иконок</string>
 </resources>
