Added a toast to screenshot delete, why not right?
http://i.imgur.com/vhVqXlv.jpg

--- a/packages/SystemUI/res/values-ru/nitrogen_strings.xml
+++ b/packages/SystemUI/res/values-ru/nitrogen_strings.xml
@@ -32,4 +32,7 @@
     <string name="screenrecord_notif_pointer_off">Скрыть нажатия</string>
     <!-- Screen record notification error title -->
     <string name="screenrecord_notif_error">Невозможно записать экран</string>
+
+  <!-- Screenshot Delete Toast -->
+  <string name="delete_screenshot_toast">Скриншот удалён</string>
 </resources>
